fixed vc spacing

--- a/scss/_channels.scss
+++ b/scss/_channels.scss
@@ -112,6 +112,9 @@ button[aria-label="User Settings"]:not(.actionButton-3WMLvV):before {
 		 height: 0px;
 		 background: rgba(var(--AccentColor), 1);
 }
+[aria-label="Open Chat"].iconItem-1EjiK0 {
+    padding: 5px 0;
+}
 
 /* Channel Icons */
 .icon-2W8DHg {
